XaosUI 2.0.0.7 - Big UI Updates
2.0.0.7 Adds
   - Party now functional
   - DPS/EXP Counter Added

   -"Yakone" added to acceptable pledges, enables Yakone's Hack
     Requireds Renovi & Resan ScripterPledge Help for what it does.
   -UIReporting added - Players can now choose to report damage to the Admin staff
     on an hourly basis. Players must enable this option using UIReporting ON,
     option is off by default.

   - qolWithReldi added
     a. Warrior Skills Added
      - Berserk Hack Added
      - Warcry Hack Added
      - Center Hack Added
     b. Thief Skills Added
      - Trance Hack Added
     c. Barbarian Skills Added
      - Resolve Hack Added
     d. Mobs - Go into triggers to maunally turn on (Suggested use is for party leader or solo areas only)
      - Web Killer
      - Maze
      - Misery
      - Fae Forest
     e. Party
      - Guard
      - Rescue
      - Heal
     f. Misc
      - HeroEmpowerment
      - QuestComplete

2.0.0.7 Fixes
   - Afflictions now get Time Terms passed to Character Card
     (Afflicts under 1 year fix)

--- a/changelog.txt
+++ b/changelog.txt
@@ -207,3 +207,57 @@ ___________________________________________________________________
 
 2.0.0.6 Tester Report
 -pending
+
+___________________________________________________________________
+XaosUI 2.0.0.7 - Big UI Updates
+
+2.0.0.7 Adds
+   - Party now functional
+   - DPS/EXP Counter Added
+
+   -"Yakone" added to acceptable pledges, enables Yakone's Hack
+     Requireds Renovi & Resan ScripterPledge Help for what it does.
+   -UIReporting added - Players can now choose to report damage to the Admin staff
+     on an hourly basis. Players must enable this option using UIReporting ON,
+     option is off by default.
+
+   - qolWithReldi added
+     a. Warrior Skills Added
+      - Berserk Hack Added
+      - Warcry Hack Added
+      - Center Hack Added
+     b. Thief Skills Added
+      - Trance Hack Added
+     c. Barbarian Skills Added
+      - Resolve Hack Added
+     d. Mobs - Go into triggers to maunally turn on (Suggested use is for party leader or solo areas only)
+      - Web Killer
+      - Maze
+      - Misery
+      - Fae Forest
+     e. Party
+      - Guard
+      - Rescue
+      - Heal
+     f. Misc
+      - HeroEmpowerment
+      - QuestComplete
+
+
+2.0.0.7 Fixes
+   - Afflictions now get Time Terms passed to Character Card
+     (Afflicts under 1 year fix)
+
+2.0.0.7 Known Issues
+-Equipment lines expand past window
+-affects does not support a some of affects
+-questing is unfinished
+-feed is unfinished
+-need to add super gain somewhere...
+-disarm trigger is still meh, but getting better
+-Feed time session lacks leading zeros's
+-entering the scripts menu crashes mudlet sometimes (This is a big issue)
+-having generic_mapper installed causes extra initializations
+-Save function needs to be rewriten to allow data to survive an update.
+-invis disarms causing a perm disarmed state
+-Session time can show -days due to date time math errors
