--- a/changelog.txt
+++ b/changelog.txt
@@ -272,10 +272,35 @@ XaosUI 2.0.0.8 - Big Scripter Update + Few UI Fixes
    - Scripter will now pause for mana at half the hp threshold
 
 2.0.0.8 Fixes
-   - DPS/EXP tweeked slightly should load faster. 
+   - DPS/EXP tweeked slightly should load faster.
    - Party Card edited double "'s" removed
    - expPerTerm tweeked to return 0 instead of nil
    - qolWithReldi tweeks in capitilization and variables.
+
+2.0.0.8 Known Issues
+-Equipment lines expand past window
+-affects does not support a some of affects
+-questing is unfinished
+-feed is unfinished
+-need to add super gain somewhere...
+-disarm trigger is still meh, but getting better
+-Feed time session lacks leading zeros's
+-entering the scripts menu crashes mudlet sometimes (This is a big issue)
+-having generic_mapper installed causes extra initializations
+-Save function needs to be rewriten to allow data to survive an update.
+-invis disarms causing a perm disarmed state
+-Session time can show -days due to date time math errors
+
+___________________________________________________________________
+XaosUI 2.0.0.8 - Bug Fixes
+
+2.0.0.8 Adds
+   - ShowAll command will toggle showing auto/ui output from sends.
+   - QOL Settings Card.
+
+2.0.0.8 Fixes
+   - qolWithReldi Typos/copyPasta errors.
+	 - Loadout from fresh install
 
 2.0.0.8 Known Issues
 -Equipment lines expand past window
